<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <saulo.com.sunshine.LocationEditTextPreference
        app:minLength="3"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_text" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/preference_units_entries"
        android:entryValues="@array/preference_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/preference_units_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/preference_notification_key"
        android:title="@string/preference_notification_title" />


</PreferenceScreen>